--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
   },
   "devDependencies": {
     "@types/faker": "^4.1.6",
-    "cypress": "^3.4.1"
+    "cypress": "^3.4.1",
+    "bulma": "^0.7.4",
+    "node-sass": "^4.12.0"
   }
 }
