--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,8 @@ jobs:
         uses: cypress-io/github-action@v1
         with:
           start: npm start
-          wait-on: http://localhost:3000
+          record: true
+
+        env:
+          # pass the Dashboard record key as an environment variable
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
